...
    <ImageView
        android:id="@+id/login_image_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="matrix"
        android:contentDescription="@string/content_description_login_background"
        android:src="@drawable/login" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
...
            android:id="@+id/login_constraint_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="176dp"
                android:layout_height="81dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="36dp"
                android:src="@drawable/loveat_logo"
...
