...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/new_order"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/picker"
            android:layout_marginRight="8dp"
            android:elevation="20dp"
            app:borderWidth="0dp"
            android:backgroundTint="@android:color/holo_orange_dark"
            app:layout_constraintRight_toRightOf="@+id/picker"
            app:layout_constraintBottom_toBottomOf="parent"
...
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="@dimen/main_carrusel_margin_top"
            app:layout_constraintTop_toBottomOf="@+id/titleCarrusel" />



        <TextView
            android:id="@+id/titleCarrusel"
            android:layout_width="wrap_content"
...
