...
    <string name="tag_name_menu">menu</string>
    <string name="tag_name_login">login</string>
    <string name="tag_name_signup">signup</string>

    <string name="title_main">Taste Bakery</string>
    <string name="title_cart">Cart</string>
    <string name="title_last_orders">Pedidos Favoritos</string>
    <string name="title_menu">Menú</string>

    <string name="fav_added">Se ha añadido este pedidos a favoritos</string>

    <string name="my_product_error">Tienes que autenticarte en Lets Eat para poder acceder a tus pedidos</string>
    <string name="news">¡Muy Pronto más novedades en Lets Eat!</string>
...
